--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
                 <div id="text">
                     <h5>Hey!</h5>
                     <h1>
-                        There, <br> I'm Shruti. <br> Web Developer
+                        There, <br> I'm Hariom Pandey. <br> Web Developer
                     </h1>
                     <br>
                     <h4>
                         -- "Weaving innovation through code, a web developer crafts the digital tapestry of tomorrow."
                     </h4>
                     <div id="buttons">
-                        <form action="https://www.linkedin.com/in/shru2003/" target="_blank">
+                        <form action="https://www.linkedin.com/in/hariom9368" target="_blank">
                             <button id="linkedIn"><span>LinkedIn</span> <i class="ri-linkedin-box-fill"></i></button>
                         </form>
-                        <form action="https://github.com/shru2811" target="_blank">
+                        <form action="https://github.com/HariomPandeym" target="_blank">
                             <button id="github"><span>Github </span><i class="ri-github-fill"></i></button>
                         </form>
-                        <form action="https://leetcode.com/leetcode_shruti/" target="_blank">
+                        <form action="https://leetcode.com/ganeshpandey9368" target="_blank">
                             <button id="leetcode"><span>Leetcode</span> <i class="ri-code-box-fill"></i></button>
                         </form>
                     </div>
                 </div>
                 <div class="me">
-                    <img src="./page.jpg" alt=" ">
+                    <img src="./f4f6535a-2f93-4d13-bac7-fc2101e5a05b.jpg" alt=" ">
                 </div>
             </div>
         </div>
@@ -63,17 +63,15 @@
                         So, Who Am I?
                     </h1>
                     <p>
-                        Welcome! I'm Shruti Srivastava, a sophomore studying BTech in Computer Science majoring in Big
-                        Data at the University of Petroleum and Energy Studies, Dehradun. I started coding in 11th
-                        grade, fell in love with Python, and decided to pursue coding professionally. After school, I
-                        chose computer science engineering and got into UPES in 2022 after a gap year of preparation.
-                        I've learned C, Python, Java, HTML, CSS, and JS in my first year and continue to study Data
-                        Structures using Java, Full Stack Web Development, and Big Data. I'm also a passionate Graphic
-                        Designer using Canva, with an year's experience designing posters for my university's Student
-                        Chapter. Find my design services on Fiverr, or reach me through LinkedIn or Email. I've built
-                        this website and offer frontend web development services. Thanks for visiting!
+                        Welcome! I'm Hariom Pandey, studying Master in Computer Application in NIT Kurukshetra, Haryana.
+                        I started coding in 12th grade, fell in love with Python, and decided to pursue coding professionally.
+                        After school, I chose Bachelor of Computer Application and after BCA a gap year of preparation I got AIR 313
+                        in NIMCET exam and take admission in NIT Kurukshetra, Haryana. I've learned C, Python, Java, HTML, CSS, 
+                        and JS in my first year and continue to study Data Structures using C++, Full Stack Web Development.
+                        I'm also a passionate Graphic Designer using Canva. I've built this website to show my Skills as a 
+                        resume format. Thanks for visiting!
                     </p>
-                    <form action="https://drive.google.com/file/d/12RdM7S3KGD0Sp9-Rhiy68_YxCtet79Bq/view?usp=sharing"
+                    <form action="https://drive.google.com/file/d/1S69Fu_srEueJOlfxMnJel12Tu9bivksm/view?usp=drivesdk"
                         target="_blank">
                         <button>
                             Download CV <i class="ri-article-line"></i>
@@ -173,36 +171,36 @@
                     </div>
                     <div class="v">
                         <div class="heading">
-                            <h3>To Do List</h3>
+                            <h3>PortFolio</h3>
                             <form action="https://github.com/shru2811/To-Do-List-WebDev" target="_blank">
                                 <button> <i class="ri-arrow-right-up-line"></i></button>
                             </form>
                         </div>
                         <video width="400" height="200" controls>
-                            <source src="./todo dev.mp4" type="video/mp4">
+                            <source src="./PortFolio Code.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <div class="row v2">
                     <div class="heading">
-                        <h3>Spotify Clone</h3>
+                        <h3>ToDo List</h3>
                         <form action="https://github.com/shru2811/Spotify-Clone" target="_blank">
                             <button> <i class="ri-arrow-right-up-line"></i></button>
                         </form>
                     </div>
                     <video width="400" height="200" controls>
-                        <source src="./3.mp4" type="video/mp4">
+                        <source src="./todo code.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="row v3">
                     <div class="heading">
-                        <h3>Hospital Management System</h3>
+                        <h3>Netflix Clone</h3>
                         <form action="https://github.com/shru2811/Hospital_Management_system" target="_blank">
                             <button> <i class="ri-arrow-right-up-line"></i></button>
                         </form>
                     </div>
                     <video width="400" height="200" controls>
-                        <source src="./hospital management system.mp4" type="video/mp4">
+                        <source src="./netflix clone 1.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
